[Features] Adding the home system